--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title id="title"></title>
+    </head>
     <body>
         <h1 id="timer"></h1>
         <script type="text/javascript" src="./script.js"></script>
