--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title id="title"></title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
     </head>
     <body>
         <div class="square">
-            <div id="timer" class="content">
-                <i id="play" class="fa fa-play" style="font-size:20vmin;"></i>
-            </div>
+            <div id="timer" class="content"></div>
+            <div id="triangulo"></div>
         </div>
         <script type="text/javascript" src="./script.js"></script>
         <div class="version">
