--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="square">
             <div id="timer" class="content"></div>
-            <div id="triangulo"></div>
+            <div id="triangulo" class="hide"></div>
         </div>
         <script type="text/javascript" src="./script.js"></script>
         <div class="version">
